fix five item row overlap

--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -6,6 +6,10 @@ a, a:visited, a:hover, a:active {
 .col-md-five {
   width: 20%;
   float: left;
+      position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 .bg-image {
